# arraydict

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPER.md  IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  TEST_COVERAGE.md  demo_operations.py  demo_repr.py  generate_test_log.py  operations_output.txt  pyproject.toml  test_batch_empty_reshape.py  test_path_issue.py  verify_values.py
scripts/: check_tensordict_repr.py  generate_indexing_log.py
src/arraydict/: __init__.py  arraydict.py  core.py  einops.py  ops.py
tests/: indexing_test_log.txt  test_advanced_indexing.py  test_arraydict.py  test_comprehensive_randomized.py  test_einops_backend.py  test_gpu_efficiency.py  test_non_numeric_indexing.py  test_squeeze_unsqueeze.py  test_supports_index.py
