[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arraydict"
version = "0.1.0"
description = "A lightweight, JAX-backed container for arrays sharing leading batch dimensions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "torch>=2.0.0",
    "tensordict>=0.1.0",
    "pytest>=7.0.0",
    "numpy>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arraydict"]
